fix transition shift

--- a/packages/frosted-ui/src/components/select/select.css
+++ b/packages/frosted-ui/src/components/select/select.css
@@ -59,14 +59,11 @@
   /* Animation */
   opacity: 1;
   transform: scale(1);
-  transition:
-    opacity 150ms cubic-bezier(0.16, 1, 0.3, 1),
-    transform 150ms cubic-bezier(0.16, 1, 0.3, 1);
+  transition: opacity 150ms cubic-bezier(0.16, 1, 0.3, 1);
 
   &[data-starting-style],
   &[data-ending-style] {
     opacity: 0;
-    transform: scale(0.97);
   }
 
   & :where(.fui-SelectItem[data-highlighted]:not([data-disabled])) {
